// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitleWithBadge component renders with MountPoint titles 1`] = `
<Fragment>
  <span />
   
  <EuiNotificationBadge
    className="css-1cd3kxh"
    color="subdued"
  >
    7
  </EuiNotificationBadge>
</Fragment>
`;

exports[`TitleWithBadge component renders with ReactNode titles 1`] = `
<Fragment>
  <span>
    <a
      href="https://elastic.co"
    >
      Click me!
    </a>
  </span>
   
  <EuiNotificationBadge
    className="css-1cd3kxh"
    color="subdued"
  >
    9
  </EuiNotificationBadge>
</Fragment>
`;

exports[`TitleWithBadge component renders with string titles 1`] = `
<Fragment>
  <span>
    Welcome!
  </span>
   
  <EuiNotificationBadge
    className="css-1cd3kxh"
    color="subdued"
  >
    5
  </EuiNotificationBadge>
</Fragment>
`;
